Modification du template index.html

--- a/templates/_index.html
+++ b/templates/_index.html
@@ -1,23 +1,19 @@
 <!doctype html>
 <html lang="en">
-
     <head>
         <meta charset="utf-8">
-
         <title>Cassandra</title>
 
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
         <link rel="stylesheet" href="bower_components/reveal.js/css/reveal.min.css">
-    
         <link rel="stylesheet" href="bower_components/reveal.js/css/theme/beige.css" id="theme">
     
-
         <!-- For syntax highlighting -->
         <link rel="stylesheet" href="bower_components/reveal-highlight-themes/styles/zenburn.css" id="highlight-theme">
+        <!-- local override -->
+        <link rel="stylesheet" href="css/local.css">
 
         <!-- If the query includes 'print-pdf', use the PDF print sheet -->
         <script>
@@ -34,13 +30,9 @@
         <script src="lib/js/html5shiv.js"></script>
         <![endif]-->
     </head>
-
     <body>
-
         <div class="reveal">
-
             <div class="slides">
-
                 <% _.forEach(slides, function(slide) { %>
                     <% if (!_.isArray(slide)) { %>
                         <%= section(slide) %>
@@ -54,9 +46,7 @@
                     <% } %>
                 <% }); %>
             </div>
-
         </div>
-
         <script src="bower_components/reveal.js/lib/js/head.min.js"></script>
         <script src="bower_components/reveal.js/js/reveal.min.js"></script>
         <script>
@@ -82,12 +72,9 @@
                     { src: 'bower_components/reveal.js/plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } },
                     // { src: 'bower_components/reveal.js/plugin/search/search.js', async: true, condition: function() { return !!document.body.classList; } }
                     //{ src: 'bower_components/reveal.js/plugin/remotes/remotes.js', async: true, condition: function() { return !!document.body.classList; } }
-
                     { src: 'js/loadhtmlslides.js', condition: function() { return !!document.querySelector( '[data-html]' ); } }
                 ]
             });
         </script>
-
     </body>
-
 </html>
